# AudioML

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-audio-datasets.ipynb  02-text-to-speech.ipynb  03-speech-recognition.ipynb  04-mic-to-text.ipynb  05-whisper-intro.ipynb
src/: device-asr.py
