[tool.poetry]
name = "AudioML"
version = "0.1.0"
description = ""
authors = ["yeungadrian"]

[tool.poetry.dependencies]
python = "^3.10"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
pre-commit = "^2.19.0"
scikit-learn = "^1.1.1"
mlflow = "2.0.1"
python-dotenv = "^0.21.0"
boto3 = "^1.26.31"
numba = "^0.56.4"
music21 = "^8.1.0"
torch = [
	{ url = "https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp310-cp310-win_amd64.whl",  platform = "windows"},
	#{ version  = "^1.13.1",  platform = "darwin"}
	]
soundfile = "^0.11.0"
deep-phonemizer = "^0.0.17"
torchaudio = {url = "https://download.pytorch.org/whl/cu116/torchaudio-0.13.1%2Bcu116-cp310-cp310-win_amd64.whl"}
sentencepiece = "^0.1.97"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"
black = "^22.12.0"
isort = "^5.11.4"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
